[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "offkit"
version = "0.1.0"
description = "Hybrid C+Python offensive security toolkit (MVP: fast port scanner)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
authors = [
  {name = "Daniel DiPietro", email = "ddipietro8227@gmail.com"},
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
offkit = "pykit.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["pykit"]

[tool.hatch.build.targets.wheel.force-include]
"core/scanner/connect_scanner.c" = "core/scanner/connect_scanner.c"
"Makefile" = "Makefile"
